--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,11 +11,11 @@
 
 set $mod Mod4
 
-exec --no-startup-id ~/dotfiles/monitor-setup.sh
+#exec --no-startup-id ~/dotfiles/monitor-setup.sh
 exec --no-startup-id picom
 #exec_always --no-startup-id killall polybar
 #exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh 
-bindsym $mod+space exec rofi -show combi
+#bindsym $mod+space exec rofi -show combi
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -57,7 +57,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod++q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+space exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
