--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,6 +13,8 @@ set $mod Mod4
 
 #exec --no-startup-id ~/dotfiles/monitor-setup.sh
 exec --no-startup-id picom
+exec --no-startup-id xset s off
+exec --no-startup-id xset -dpms
 #exec_always --no-startup-id killall polybar
 #exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh 
 #bindsym $mod+space exec rofi -show combi
@@ -188,7 +190,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	#status_command i3status -c ~/.config/i3status/config
-	status_command SCRIPT_DIR=~/.config/i3blocks/scripts i3blocks
+	status_command i3status -c ~/.config/i3status/config
 	tray_output none 
 }
