--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,9 +15,6 @@ set $mod Mod4
 exec --no-startup-id picom
 exec --no-startup-id xset s off
 exec --no-startup-id xset -dpms
-#exec_always --no-startup-id killall polybar
-#exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh 
-#bindsym $mod+space exec rofi -show combi
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -56,7 +53,7 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod++q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+space exec --no-startup-id dmenu_run
