--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,6 +15,8 @@ set $mod Mod4
 exec --no-startup-id picom
 exec --no-startup-id xset s off
 exec --no-startup-id xset -dpms
+exec --no-startup-id ~/dotfiles/scripts/liquidctl.sh
+exec --no-startup-id ~/dotfiles/scripts/gpu-start.sh
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
