Added some scripts to run in /i3/.config/i3/config

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,6 +12,7 @@
 set $mod Mod4
 
 #exec --no-startup-id ~/dotfiles/monitor-setup.sh
+exec --no-startup-id ~/dotfiles/monitor-setup.sh
 exec --no-startup-id picom
 exec --no-startup-id xset s off
 exec --no-startup-id xset -dpms
