--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,13 +11,12 @@
 
 set $mod Mod4
 
-#exec --no-startup-id ~/dotfiles/monitor-setup.sh
 exec --no-startup-id ~/dotfiles/monitor-setup.sh
-exec --no-startup-id picom
-exec --no-startup-id xset s off
-exec --no-startup-id xset -dpms
-exec --no-startup-id ~/dotfiles/scripts/liquidctl.sh
-exec --no-startup-id ~/dotfiles/scripts/gpu-start.sh
+exec --no-startup-id picom # Running picom
+exec --no-startup-id xset s off # Disabling screensaver
+exec --no-startup-id xset -dpms #Disabling screensaver
+exec --no-startup-id ~/dotfiles/scripts/liquidctl.sh # Running liquidctl script for setting CPU cooler values
+exec --no-startup-id ~/dotfiles/scripts/gpu-start.sh # Running nvidia script for setting fan speed
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
