--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -11,10 +11,9 @@
 
 set $mod Mod4
 
-#exec --no-startup-id ~/dotfiles/monitor-setup.sh
-exec --no-startup-id picom
-exec --no-startup-id xset s off
-exec --no-startup-id xset -dpms
+exec --no-startup-id picom # Running picom
+exec --no-startup-id xset s off # Disabling screensaver
+exec --no-startup-id xset -dpms # Disabling screensaver
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
