Fixed battery display in i3status for i3laptop

--- a/i3laptop/.config/i3status/config
+++ b/i3laptop/.config/i3status/config
@@ -11,11 +11,11 @@ general {
         interval = 5
 }
 
-order += "battery 0"
 order += "disk /"
 order += "memory"
 order += "cpu_usage"
 order += "load"
+order += "battery 1"
 order += "time"
 
 time {
@@ -37,13 +37,13 @@ cpu_usage {
 memory {
 	format = " MEM %percentage_used "
 }
-battery 0 {
-   format = "%status %percentage %remaining %emptytime"
-   format_down = "No battery"
-   status_chr = "  CHR"
-   status_bat = "  BAT"
-   status_unk = "? UNK"
-   status_full = "  FULL"
+battery 1 {
+   format = " %status %percentage"
+   format_down = " "
+   status_chr = " "
+   status_bat = " "
+   status_unk = " "
+   status_full = " "
    path = "/sys/class/power_supply/BAT%d/uevent"
    low_threshold = 10
 }
