--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -15,7 +15,7 @@ exec --no-startup-id picom # Running picom
 exec --no-startup-id xset s off # Disabling screensaver
 exec --no-startup-id xset -dpms # Disabling screensaver
 exec --no-startup-id xset r on
-exec --no-startup-id xset r 100
+exec --no-startup-id xset r rate 200 80 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
