--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,6 +20,9 @@ exec --no-startup-id xset r rate 200 80
 exec --no-startup-id ~/dotfiles/scripts/liquidctl.sh # Running liquidctl script for setting CPU cooler values
 exec --no-startup-id ~/dotfiles/scripts/gpu-start.sh # Running nvidia script for setting fan speed
 
+# Keybind for flameshot (screenshot tool)
+bindsym Print exec flameshot gui
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:JetBrains Mono Nerd Font 12
