--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -17,6 +17,9 @@ exec --no-startup-id xset -dpms # Disabling screensaver
 exec --no-startup-id xset r on
 exec --no-startup-id xset r rate 200 80 
 
+# Bind for flameshot (screenshot tool)  
+bindsym Print exec flameshot gui
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:JetBrains Mono Nerd Font 12
