Removed battery icons in i3Status bar for laptop

--- a/i3laptop/.config/i3status/config
+++ b/i3laptop/.config/i3status/config
@@ -38,13 +38,13 @@ memory {
 	format = " MEM %percentage_used "
 }
 battery 1 {
-	format = " %status %percentage"
+	format = " %status %percentage "
 	format_percentage = "%.f%s"
-	format_down = " "
-	status_chr = " "
-	status_bat = " "
-	status_unk = " "
-	status_full = " "
+	format_down = "BAT"
+	status_chr = "BAT"
+	status_bat = "BAT"
+	status_unk = "BAT"
+	status_full = "BAT"
 	path = "/sys/class/power_supply/BAT%d/uevent"
 	low_threshold = 10
 }
