--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,13 +11,13 @@
 
 set $mod Mod4
 
-exec --no-startup-id ~/dotfiles/monitor-setup.sh
+exec --no-startup-id ~/dotfiles/monitor_setup.sh
 exec --no-startup-id xset s off # Disabling screensaver
 exec --no-startup-id xset -dpms #Disabling screensaver
 exec --no-startup-id xset r on
 exec --no-startup-id xset r rate 200 80 
 exec --no-startup-id ~/dotfiles/scripts/liquidctl.sh # Running liquidctl script for setting CPU cooler values
-exec --no-startup-id ~/dotfiles/scripts/gpu-start.sh # Running nvidia script for setting fan speed
+exec --no-startup-id ~/dotfiles/scripts/gpu_start.sh # Running nvidia script for setting fan speed
 
 # Keybind for flameshot (screenshot tool)
 bindsym Print exec flameshot gui
