--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -19,6 +19,13 @@ exec --no-startup-id xset r rate 200 80
 # Bind for flameshot (screenshot tool)  
 bindsym Print exec flameshot gui
 
+# Binds for adjusting screen brightness
+# Install the brightnessctl tool: sudo apt install brightnessctl
+# Brightness down
+bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
+# Brightness up
+bindsym XF86MonBrightnessUp exec brightnessctl set 10%+
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:JetBrains Mono Nerd Font 12
