--- a/alacritty/.config/alacritty/rosepine.toml
+++ b/alacritty/.config/alacritty/rosepine.toml
@@ -1,16 +1,16 @@
 [colors.primary]
 foreground = "#e0def4"
 background = "#000000"
-dim_foreground = "#908caa"
-bright_foreground = "#e0def4"
+dim_foreground = "#121212"
+bright_foreground = "#121212"
 
 [colors.cursor]
 text = "#e0def4"
-cursor = "#FFFFFF"
+cursor = "#56526e"
 
 [colors.vi_mode_cursor]
 text = "#e0def4"
-cursor = "#FFFFFF"
+cursor = "#56526e"
 
 [colors.search.matches]
 foreground = "#908caa"
