Changes to i3 colors, nvim lualine colors, and alacritty colors. Also changed computer setup script to include some other packages

--- a/alacritty/.config/alacritty/rosepine.toml
+++ b/alacritty/.config/alacritty/rosepine.toml
@@ -5,12 +5,12 @@ dim_foreground = "#121212"
 bright_foreground = "#121212"
 
 [colors.cursor]
-text = "#e0def4"
-cursor = "#56526e"
+text = "#000000"
+cursor = "#ffffff"
 
 [colors.vi_mode_cursor]
-text = "#e0def4"
-cursor = "#56526e"
+text = "#000000"
+cursor = "#ffffff"
 
 [colors.search.matches]
 foreground = "#908caa"
