--- a/alacrittylaptop/.config/alacritty/rosepine.toml
+++ b/alacrittylaptop/.config/alacritty/rosepine.toml
@@ -5,12 +5,12 @@ dim_foreground = "#121212"
 bright_foreground = "#121212"
 
 [colors.cursor]
-text = "#e0def4"
-cursor = "#56526e"
+text = "#ffffff"
+cursor = "#000000"
 
 [colors.vi_mode_cursor]
-text = "#e0def4"
-cursor = "#56526e"
+text = "#ffffff"
+cursor = "#000000"
 
 [colors.search.matches]
 foreground = "#908caa"
