--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -194,9 +194,31 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Color shemes for windows 
+set $bgcolor    #44415a
+set $in-bgcolor #000000
+set $text       #ffffff
+set $u-bgcolor  #ff0000
+set $indicator  #a8a3c1
+set $in-text    #a0a0a0
+#                       border          background      text            indicator (a line which shows where the next window will be placed)     
+client.focused          $bgcolor        $bgcolor        $text           $indicator
+client.unfocused        $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
+client.focused_inactive $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
+client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcolor 
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
 	status_command i3status -c ~/.config/i3status/config
 	tray_output none 
+        colors {
+                background #000000
+                separator #ffffff
+                #                       border          background      text
+                focused_workspace       $bgcolor        $bgcolor        $text
+                inactive_workspace      $in-bgcolor     $in-bgcolor     $text
+                urgent_workspace        $u-bgcolor      $u-bgcolor      $text   
+
+        }
 }
