--- a/i3laptop/.config/i3/config
+++ b/i3laptop/.config/i3/config
@@ -66,7 +66,7 @@ bindsym $mod+Return exec ~/alacritty/target/release/alacritty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec --no-startup-id dmenu_run
+bindsym $mod+space exec --no-startup-id dmenu_run -nb "#000000" -sb "#44415a" -sf "#ffffff" -fn "JetBrains Mono Nerd Font"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
