Changed GPU fans script, added script to i3 config

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,6 +11,8 @@
 
 set $mod Mod4
 
+exec --no-startup-id ~/dotfiles/scripts/gpu_start.sh
+
 # Keybind for flameshot (screenshot tool)
 bindsym Print exec flameshot gui
 
