--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,9 +13,6 @@ set $mod Mod4
 
 exec --no-startup-id ~/dotfiles/scripts/gpu_start.sh
 
-# Keybind for flameshot (screenshot tool)
-bindsym Print exec flameshot gui
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:JetBrains Mono Nerd Font 12
@@ -215,3 +212,9 @@ bar {
 }
 
 workspace 6 output HDMI-1
+
+# Program shortcuts
+bindsym $mod+d exec discord 
+bindsym $mod+b exec brave 
+bindsym $mod+p exec postman 
+bindsym Print exec flameshot gui
