--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -12,7 +12,7 @@ history=3000
 vi_mode_style={shape="Block", blinking="Off"}
 [font]
 size=15
-normal={family="JetBrains Mono Nerd Font", style="Regular"}
-bold={family="JetBrains Mono Nerd Font", style="Bold"}
-italic={family="JetBrains Mono Nerd Font", style="Italic"}
-bold_italic={family="JetBrains Mono Nerd Font", style="Bold Italic"}
+normal={family="BlexMono Nerd Font", style="Regular"}
+bold={family="BlexMono Nerd Font", style="Bold"}
+italic={family="BlexMono Nerd Font", style="Regular"}
+bold_italic={family="BlexMono Nerd Font", style="Bold"}
