--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,30 +36,18 @@ setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
-set -g mode-style "fg=#839495,bg=#063540"
-
-set -g message-style "fg=#839495,bg=#063540"
-set -g message-command-style "fg=#839495,bg=#063540"
-
-set -g pane-border-style "fg=#063540"
-set -g pane-active-border-style "fg=#839495"
-
 set -g status "on"
 set -g status-justify "left"
-
-set -g status-style "fg=#839495,bg=#002c38"
-
 set -g status-left-length "100"
 set -g status-right-length "100"
+set -g mode-style "fg=#252530,bg=#aeaed1"
+set -g message-style "fg=#252530,bg=#aeaed1"
+set -g status-style "fg=#cdcdcd,bg=#1c1c24"
 
-set -g status-left-style NONE
-set -g status-right-style NONE
+set -g status-right "#[fg=#cdcdcd,bg=#1c1c24] session #S "
+set -g status-left ""
 
-set -g status-left "#[fg=#002c38,bg=#839495,bold] #S #[fg=#839495,bg=#002c38,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#839495,bg=#002c38,nobold,nounderscore,noitalics]#[fg=#002c38,bg=#839495,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#839495,bg=#002c38"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#839495,bg=#002c38"
-setw -g window-status-format "#[fg=#002c38,bg=#002c38,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#002c38,bg=#002c38,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#002c38,bg=#839495,nobold,nounderscore,noitalics]#[fg=#664d00,bg=#839495,bold] #I #[fg=#839495,bg=#664d00,bold] #W #[fg=#664d00,bg=#002c38,nobold,nounderscore,noitalics]"
+setw -g window-status-separator " "
+setw -g window-status-style "NONE,fg=#cdcdcd,bg=#1c1c24"
+setw -g window-status-format "#[fg=#1c1c24,bg=#cdcdcd,bold] #I #W "
+setw -g window-status-current-format "#[fg=#1c1c24,bg=#7fa563,bold] #I #W "
