--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@ exec --no-startup-id ~/dotfiles/scripts/gpu_start.sh
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:BlexMono Nerd Font 14
+font pango:JetBrainsMono Nerd Font 14
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -49,7 +49,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec --no-startup-id dmenu_run -nb "#000000" -sb "#ffffff" -sf "#000000" -fn "BlexMono Nerd Font-14"
+bindsym $mod+space exec --no-startup-id dmenu_run -nb "#000000" -sb "#ffffff" -sf "#000000" -fn "JetBrainsMono Nerd Font-14"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
